--- a/기존프로젝트/Refactoring.vcxproj
+++ b/기존프로젝트/Refactoring.vcxproj
@@ -134,6 +134,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Component.h" />
+    <ClInclude Include="EventObject.h" />
     <ClInclude Include="GameFramework.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Object.h" />
@@ -144,6 +145,7 @@
     <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="EventObject.cpp" />
     <ClCompile Include="GameFramework.cpp" />
     <ClCompile Include="Project.cpp" />
     <ClCompile Include="Map.cpp" />
