--- a/기존프로젝트/Refactoring.vcxproj.filters
+++ b/기존프로젝트/Refactoring.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="EventObject.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="ClientNetwork.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Object.cpp">
@@ -69,6 +72,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="EventObject.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ClientNetwork.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
