팀 선택에 따라 색깔 변경 확인

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="Scene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\server\server\server\protocol.h" />
     <ClInclude Include="ClientNetwork.h" />
     <ClInclude Include="Common.h" />
     <ClInclude Include="GameFramework.h" />
